# backend_formulario

./: gunicorn.conf.py  pyproject.toml  requirements.txt  server.py
config/: settings.py  urls.py
formulario/: admin.py
formulario/migrations/: 0001_initial.py
formulario/models/: __init__.py  estado.py  formulario.py  hobbies.py  linguagens.py
formulario/serializers/: __init__.py  estado.py  formulario.py  hobbies.py  linguagens.py
formulario/views/: __init__.py  estados.py  formulario.py  hobbies.py  linguagens.py
